[workspace]
members = [
    "setup",
    "daemon"
]

[workspace.package]
name = "muturer_button"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
libc = "0.2.144"
libpulse-sys = "1.20.1"
serialport = "4.2.1"
ddaa_protocol = "0.2.0"
toml = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
pulser = { path = "pulse-rs/pulser" }
