[workspace]
members = [
    "mewture_setup",
    "mewture_daemon"
]

[workspace.package]
name = "mewture_button"
version = "0.1.6"
edition = "2021"
license = "BSD-3-Clause"
authors = ["EllisGL"]

[workspace.dependencies]
home = "0.5.5"
libc = "0.2.144"
libpulse-sys = "1.20.1"
serialport = "4.2.1"
ddaa_protocol = "0.2.0"
toml = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
pulser = { path = "pulse-rs/pulser" }
