[workspace]
resolver = "2"
members = [
    "mewture_setup",
    "mewture_daemon",
    "mewture_shared"
]

[workspace.package]
name = "mewture_button"
version = "0.1.25"
edition = "2021"
license = "BSD-3-Clause"
authors = ["EllisGL"]

[workspace.dependencies]
ddaa_protocol = "0.2.0"
home = "0.5.5"
libc = "0.2.144"
libpulse-sys = "1.20.1"
mewture_shared = { path = "mewture_shared" }
mockall = "0.11.4"
pulser = { path = "pulse-rs/pulser" }
serialport = "4.2.1"
toml = "0.8.6"
serde = { version = "1.0", features = ["derive"] }

