[package]
name = "daemon"
version.workspace = true
edition.workspace = true

[dependencies]
serialport = { workspace = true }
ddaa_protocol = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
pulser = { workspace = true }
clap = { version = "4.3.4", features = ["derive"] }
