[package]
name = "mewture_daemon"
description = "Mewture Button Host Software that uses DDAA (Ding Ding Ack Ack) protocol about the mute status of a source in PulseAudio (linux)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[package.metadata.deb]
name="mewture_button"
depends = "$auto, systemd"
extended-description = "Mewture Button Host Software that uses DDAA (Ding Ding Ack Ack) protocol about the mute status of a source in PulseAudio (linux). See <https://github.com/ellisgl/MewtureButton-Firmware>"
section = "admin"
priority = "optional"
assets = [
    ["target/release/mewture_daemon", "usr/local/bin/mewture_daemon", "755"],
    ["target/release/mewture_setup", "usr/local/bin/mewture_setup", "755"],
    ["../debian/mewture_daemon.service", "/usr/lib/systemd/user/mewture_daemon.service", "644"],
]
maintainer-scripts = "debian/scripts"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
ddaa_protocol = { workspace = true }
home = { workspace = true }
mewture_shared = { workspace = true }
mockall = { workspace= true }
pulser = { workspace = true }
serde = { workspace = true }
serialport = { workspace = true }
tempfile = "3.8.0"
toml = { workspace = true }
