[package]
name = "mewture_setup"
version.workspace = true
edition.workspace = true

[dependencies]
dialoguer = "0.10.4"
indicatif = "0.17.3"
home = { workspace = true }
ddaa_protocol = { workspace = true }
libpulse-sys = { workspace = true }
mewture_shared = { workspace = true }
pulser = { workspace = true }
serde = { workspace = true }
serialport = { workspace = true }
toml = { workspace = true }
