[package]
name = "setup"
version.workspace = true
edition.workspace = true

[dependencies]
indicatif = "0.17.3"
dialoguer = "0.10.4"
libpulse-sys = { workspace = true }
pulsectl-rs = { workspace = true }
serialport = { workspace = true }
ddaa_protocol = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
